--- a/home/index.html
+++ b/home/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My first Vue page</title>
-  <style>
-    #app {
-      display: inline-block;
-      padding: 10px;
-      font-size: x-large;
-      background-color: lightgreen;
-    }
-  </style>
+<title>My first Vue page</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -23,18 +16,8 @@
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-<script>
-  const app = Vue.createApp({
-   data() {
-    return {
-     message: "Hello World!"
-    }
-   }
-  })
-  
-  app.mount('#app')
+<script src="js/vue.js"></script>
 
-</script>
 
 </body>
 </html>
